Remove active link background state, add back meta box fade out for capabilities single post views, fix to dropdown menu (header overflow:hidden) on capabilities single post views

--- a/wp-content/themes/hmr-theme/assets/css/less/views/base.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/views/base.less
@@ -67,5 +67,6 @@ a {
 	&:focus {
 		outline:none;
 		text-decoration:none;
+		background: none;
 	}
 }
