--- a/wp-content/themes/hmr-theme/assets/css/less/views/header.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/views/header.less
@@ -1,4 +1,4 @@
-.banner { 
+.banner {
 	.brand {
 		.size(83px,142px);
 		display:block;
@@ -14,4 +14,10 @@
 	position:relative;
 	z-index:99;
 	background:@blueDark;
+}
+
+.single-capability {
+	.banner {
+		overflow: visible !important;
+	}
 }
